<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/first_fragment"
        android:title="@string/dashboard"
        android:icon="@drawable/ic_baseline_home"/>

    <item
        android:id="@+id/second_fragment"
        android:title="@string/profil_meu"
        android:icon="@drawable/ic_baseline_account_circle"/>

    <item
        android:id="@+id/third_fragment"
        android:title="@string/galeri"
        android:icon="@drawable/ic_baseline_photo_library"/>

    <item
        android:id="@+id/fourth_fragment"
        android:title="@string/peserta_meu"
        android:icon="@drawable/ic_baseline_people"/>

    <item
        android:id="@+id/fifth_fragment"
        android:title="@string/loker"
        android:icon="@drawable/ic_baseline_apartment"/>

</menu>